--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 - '3.6'
 - '3.7'
 install: pip install -r requirements.txt
+script:
+  pytest
 deploy:
   provider: pypi
   username: parody_bit
