--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,20 @@ language: python
 os: linux
 dist: xenial
 python:
-- '3.6'
-- '3.7'
-install: pip install -r requirements.txt
+ - '3.6'
+ - '3.7'
+install: "make"
 script:
-  pytest
+ - make test
+ - make ci
+jobs:
+  include:
+    - stage: test
+        python: '3.6'
+
+    - stage: test
+      python: '3.7'
+
 deploy:
   provider: pypi
   username: parody_bit
