--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,9 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-
-[packages]
+tox = "*"
+docutils = "*"
+detox = "*"
 apply-defaults = "==0.1.4"
 attrs = "==19.3.0"
 cbor = "==1.0.0"
@@ -18,6 +19,8 @@ six = "==1.14.0"
 websockets = "==8.1"
 zipp = "==3.1.0"
 pytest = "==5.3.3"
+[packages]
+"witpy" = {path = ".", editable = true,}
 
 [requires]
 python_version = "3.7"
