--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 sudo: required
-language: python
 dist: xenial
+language: python
+virtualenv:
+  system_site_packages: true
 python:
  - '3.5'
  - '3.6'
